# OmniViz

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml  run.sh
data/: .JOREK_control_points.dat.swp  JOREK_control_points.dat:Zone.Identifier  boundary.txt  circular_v0_tor24_pol24_hexa_PF.msh  passive_structure_10cm_off_1e-4_thick.msh
docs/: tools.md
gui/: gui.py  run_gui.py
omniviz/: __init__.py  __main__.py  io.py  models.py  plotter.py
omniviz/assets/: __init__.py
omniviz/gui/: __init__.py  app.py  file_dialog.py  import_dialog.py  main_window.py  panels.py  photo.py  qt_icons.py  qt_panels.py  qt_style.py  theme.py
src/: __init__.py  parser.py  plotter.py  plotting.py  visualizeBoundary.py
tests/: test_io.py  test_plotter.py
