[project]
name = "omniviz"
version = "0.2.0"
description = "Visualization toolkit for stellarator/fusion-reactor geometries (point clouds, JOREK boundaries, Patran/VTK meshes, vector fields, wire loops)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Samet Kocbay", email = "sametkocbay15@gmail.com" },
]
keywords = ["fusion", "stellarator", "visualization", "pyvista", "JOREK"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "customtkinter>=5.2.2",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyvista>=0.43",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
]

[project.scripts]
omniviz = "omniviz.gui.app:run"

[project.urls]
Homepage = "https://github.com/sametkocbay/OmniViz"
Issues = "https://github.com/sametkocbay/OmniViz/issues"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omniviz"]
# Non-Python files inside the package (e.g. omniviz/assets/*.png) are
# included automatically by hatchling — no extra config needed.

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
]
ignore = [
    "E501",  # line length is enforced by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["omniviz"]
